<resources>
    <string name="app_name">My wallet 2</string>
    <string name="new_invitation">New Invitation</string>
    <string name="delete_invitation">Delete Invitation</string>
    <string name="delete_all_invitations">Delete All Invitations</string>
    <string name="new_credential">New Vaccination Credential</string>
    <string name="delete_credential">Delete Credential</string>
    <string name="delete_all_credentials">Delete All Credentials</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="sync">Synchronization</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="invitation">Invitation</string>
    <string name="disconnected">Disconnected</string>
    <string name="invitation_card">Invitation</string>
    <string name="credential_card">Credential</string>
    <string name="credential_confirmation_title">Credential Offer</string>
    <string name="credential_confirmation_prompt">Do you want to request:</string>
    <string name="presentation_confirmation_title">Issue Presentation</string>
    <string name="presentation_confirmation_prompt">Do you want to share:</string>
    <string name="presentation_sent_title">Presentation</string>
    <string name="presentation_sent_goal">Check In</string>
    <string name="about_dialog">%1$s\napp id: %2$s\nversion: %3$s"</string>
    <string name="icon">icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="request_credential">Request Credential</string>
    <string name="offer_credential">Offer Credential</string>


    <string name="copyright">"Copyright \u00A9 2023 gematik"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preferences -->
    <string name="base_path">Agent\'s address</string>
    <string name="submit">Submit</string>
</resources>