<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/sync"
          android:icon="@android:drawable/stat_notify_sync"
          android:title="@string/sync" app:showAsAction="ifRoom"/>
    <item android:id="@+id/settings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/settings" app:showAsAction="ifRoom"/>
    <item android:id="@+id/about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/about" app:showAsAction="ifRoom"/>
    <item android:id="@+id/invitation"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/invitation" app:showAsAction="ifRoom"/>
</menu>