<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.main.RequestPresentationDialogFragment" android:padding="20dp"
              android:gravity="center" tools:visibility="visible">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/presentation_confirmation_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/dividerHorizontal"
            tools:visibility="visible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/presentation_confirmation_prompt"
            android:textAlignment="center" android:paddingBottom="10dp"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
    />

    <LinearLayout
            android:id="@+id/requested_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Accept" android:layout_margin="10dp"/>
        <Button
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Decline" android:layout_weight="1"
                android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>